--- a/restaurant/views/product/produto_regis.html
+++ b/restaurant/views/product/produto_regis.html
@@ -10,18 +10,21 @@
     <h3>Registre o produto</h3>
 
   <fieldset class='float-label-field'>
-    <label for="txtName">Nome Produto</label>
-    <input id="txtName" type='text'>
+    <label for="product_name">Nome Produto</label>
+    <input id="product_name" type='text'>
   </fieldset>
 
   <fieldset class='float-label-field'>
-    <label for="txtEmail" >Descrição</label>
-    <input id="txtEmail" type='text'>
+    <label for="txt_descricao" >Descrição</label>
+    <input id="txt_descricao" type='text'>
   </fieldset>
-
+ <fieldset class='float-label-field'>
+    <label for="num_valor">Valor</label>
+    <input id="num_valor" type='text'>
+  </fieldset>
   <fieldset class='float-label-field'>
-    <label for="txtConfirmPassword">Quantidade</label>
-    <input id="txtConfirmPassword" type='text'>
+    <label for="num_qtd">Quantidade</label>
+    <input id="num_qtd" type='text'>
   </fieldset>
   <div class="col-12">
     <button type="submit" class="btn btn-primary">Registrar</button>
