Segunda Versão, 3 paginas, e exemplos dos modulos

--- a/restaurant/views/product/product_index.html
+++ b/restaurant/views/product/product_index.html
@@ -23,7 +23,7 @@
     </nav>
         <h2 class="modern-form h3">Módulo de gerenciamento de produtos do Meu Restaurante</h2>
         <ul>
-            <li class="modern-form"><a href="/product/registrar">Registrar Produto</a></li>
+            <li class="modern-form"><a href="/product/regis">Registrar Produto</a></li>
             <li class="modern-form"><a href="/product/ingredientes">Registrar Ingrediente a Produtos</a></li>
             <li class="modern-form"><a href="/product/listar_produtos">Listar os produto</a></li>
         </ul>
