Terceira Versão, Paginas okey, funcionando back mas sem front

--- a/restaurant/views/product/product_listar.html
+++ b/restaurant/views/product/product_listar.html
@@ -24,7 +24,7 @@
                 {% endfor %}
             {% else %}
             <tr>
-                <td>Ainda não existem pedidos registrados!</td>
+                <td>Ainda não existem pedidos registrados! Por favor registre</td>
             </tr>
         {% endif %}
 
