QUARTA VERSAO, FUNCOES CUMPRIDAS MAS SEM BELEZA, funcionando back mas sem front

--- a/restaurant/views/product/product_listar.html
+++ b/restaurant/views/product/product_listar.html
@@ -34,6 +34,6 @@
         {% endif %}
 
     </table>
-        <p>Voltar para <a href="/">página inicial</a>!</p>
+        <p>Voltar para <a href="/product">página inicial</a>!</p>
     </body>
 </html>
