--- a/restaurant/views/product/product_ingre.html
+++ b/restaurant/views/product/product_ingre.html
@@ -4,6 +4,7 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
     integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
     crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="static/css/style.css" />
 </head>
 <body>
 <form action="/product/regis_ingredientes" id="info" name="info" method = "POST">
